# network-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  devices.example.yaml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_tool_request.md
.github/workflows/: ci.yml  release.yml  test-compat.yml
.well-known/: mcp.json
dashboards/: bgp-fabric.json  interface-monitoring.json  network-overview.json
deploy/: grafana-dashboard.yml  network-mcp.service  nginx.conf  prometheus.yml
docs/: ARCHITECTURE.md  COMPLIANCE.md  CONTRIBUTING.md  DEPLOYMENT.md  DRIVER_COVERAGE.md  GETTING_STARTED.md  HARDENING_ROADMAP.md  PERFORMANCE.md  PLUGIN-DEVELOPMENT.md  PROMPTS.md  REAL_WORLD_USECASES.md  RESOURCES.md  SECURITY.md  TOOLS.md  TROUBLESHOOTING.md
docs/adr/: 001-pyeapi-over-napalm.md  002-scrapli-for-ssh.md  003-fastmcp-over-raw-jsonrpc.md  004-plugin-entry-points.md
docs/aristabuilder-integration/: ARISTABUILDER-ROADMAP.md  HANDOFF-TO-ARISTABUILDER.md  INTEGRATION-ARCHITECTURE.md
docs/integrations/: README.md  grafana.md  netbox.md  servicenow.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml
lab/: OVERNIGHT-TEST-PROMPT.md  README.md  RESEARCH-AND-HARDENING-PROMPT.md  multi-vendor-topology.yaml  run-tests.sh  setup.sh
lab/configs/: leaf-base.cfg  leaf-bgp.cfg  spine.cfg
lab/topologies/: 2-node.clab.yaml  spine-leaf.clab.yaml
scripts/: benchmark_report.py  generate_docs.py  generate_vendor_tools.py
src/network_mcp/: __init__.py  alerts.py  api_keys.py  audit.py  auth.py  cache.py  change_management.py  circuit_breaker.py  cli.py  completions.py  config.py  connection.py  drift.py  driver.py  errors.py  executor.py  feature_flags.py  gnmi_connection.py  health.py  helpers.py  hints.py  http_session.py  idempotency.py  inventory.py  leader.py  middleware.py  mock_driver.py  oauth.py  observability.py  openapi.py  playground.py  plugins.py  rate_limiter.py  rbac.py  sanitizer.py  schemas.py  sdk.py  server.py  session_mgr.py  slo.py  (+5 more)
tests/: chaos_helpers.py  conftest.py  test_acl_tools.py  test_ai_fabric_tools.py  test_alerts.py  test_ansible_integration.py  test_api_keys.py  test_audit.py  test_audit_hardening.py  test_audit_observability_polish.py  test_audit_request_context.py  test_audit_retention.py  test_auth.py  test_auth_exceptions.py  test_auth_hardening.py  test_auth_middleware.py  test_bfd_tools.py  test_bgp_write_tools.py  test_blast_radius.py  test_bulkhead.py  test_cache.py  test_cache_encryption.py  test_change_audit_trail.py  test_change_lifecycle_integration.py  test_change_management.py  test_change_management_tools.py  test_chaos.py  test_chaos_expanded.py  test_checkpoint_tools.py  test_circuit_breaker.py  test_cisco_iosxe.py  test_cisco_nxos.py  test_cisco_tools.py  test_cli_init.py  test_cli_injection.py  test_cloudvision.py  test_common_config_tools.py  test_common_interface_tools.py  test_common_monitoring_tools.py  test_common_routing_ext_tools.py  (+187 more)
tests/benchmarks/: __init__.py  conftest.py  test_cache_performance.py  test_connection_pool_throughput.py  test_serialization_overhead.py  test_tool_call_latency.py  test_tool_throughput.py
tests/fixtures/: eos_show_version.json  iosxe_restconf_interfaces.json  junos_netconf_facts.json  nxos_nxapi_show_version.json
tests/integration/: conftest.py  (+9 more)
(+120 files in other folders)
