[project]
name = "latticio"
version = "7.0.0"
description = "Multi-vendor Network MCP Platform for AI-powered network automation"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Latticio Labs"},
]
keywords = ["network", "mcp", "network-automation", "ai", "llm", "arista", "cisco", "juniper", "multi-vendor"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.26,<2.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "tenacity>=8.0,<10.0",
]

[project.urls]
Homepage = "https://github.com/latticio/network-mcp"
Repository = "https://github.com/latticio/network-mcp"
Issues = "https://github.com/latticio/network-mcp/issues"
Changelog = "https://github.com/latticio/network-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
arista = ["pyeapi>=1.0,<2.0"]
gnmi = ["pygnmi"]
anta = ["anta>=1.0.0"]
auth = ["pyjwt>=2.0,<3.0"]
mtls = ["cryptography>=42.0"]
prometheus = ["prometheus-client>=0.20"]
cisco = ["httpx>=0.27"]
sonic = ["httpx>=0.27"]
redis = ["redis[hiredis]>=5.0"]
vault = ["hvac>=2.0,<3.0"]
netbox = ["pynetbox>=7.0,<8.0"]
ssh = ["scrapli>=2024.1.30"]
juniper = ["scrapli>=2024.1.30", "scrapli-netconf[asyncssh]>=2024.1.30"]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "opentelemetry-exporter-prometheus>=0.45b0",
]
all = ["latticio[arista,cisco,sonic,ssh,juniper,gnmi,anta,netbox,otel,redis]"]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-benchmark>=4.0", "hypothesis>=6.0", "ruff", "mypy", "bandit", "pip-audit", "pre-commit", "latticio[otel]"]

[project.scripts]
latticio = "network_mcp.cli:main"
network-mcp = "network_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/network_mcp"]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "--benchmark-disable"
markers = [
    "benchmark: performance benchmarks (run with --benchmark-enable or --benchmark-only)",
    "integration: requires real network devices (skip by default)",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "network_mcp.mock_data.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "network_mcp.integrations.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B107", "B110", "B311"]

[tool.coverage.run]
source = ["network_mcp"]
omit = ["tests/*", "*/conftest.py", "* 2.py", "* 2/**"]

[tool.coverage.report]
show_missing = true
fail_under = 85
